--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
   "scripts": {
     "webpack": "webpack --watch",
     "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "webpack-dev-server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@webpack-cli/serve": "^1.6.1",
     "file-loader": "^6.2.0",
     "image-webpack-loader": "^6.0.0",
     "webpack": "^4.32.2",
     "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
