--- a/package.json
+++ b/package.json
@@ -13,17 +13,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@webpack-cli/serve": "^1.6.1",
     "file-loader": "^6.2.0",
-    "image-webpack-loader": "^6.0.0",
     "webpack": "^4.32.2",
     "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^4.8.1"
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "image-webpack-loader": "^6.0.0",
     "jquery": "^3.4.1",
-    "popper.js": "^1.16.0"
+    "popper.js": "^1.16.0",
+    "webpack-dev-server": "^4.8.1"
   }
 }
