--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "file-loader": "^6.2.0",
     "webpack": "^4.32.2",
     "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-pwa-manifest": "^4.3.0"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
